# RdfCrate

./: 404.html  README.md  README.qmd  api.md  dev.md  dodo.py  guide.qmd  index.html  mkdocs.yml  objects.inv  pyproject.toml
.github/workflows/: ci.yml
api/: index.html
dev/: index.html
docs/: _guide.qmd  changelog.md  motivation.md
docs/api/: index.html
docs/changelog/: index.html
docs/guide/: index.html
docs/motivation/: index.html
guide/: index.html
reference/rdfcrate/: index.html
reference/rdfcrate/rdfterm/: index.html
reference/rdfcrate/vocabs/: index.html
search/: search_index.json
specifications/: index.html
specifications/Beacon/: index.html
specifications/BioChemEntity/: index.html
specifications/BioChemStructure/: index.html
specifications/BioSample/: index.html
specifications/BioschemasRelease1_Notes/: index.html
specifications/BioschemasRelease2_Notes/: index.html
specifications/ChemicalSubstance/: index.html
specifications/ComputationalWorkflow/: index.html
specifications/Course/: index.html
specifications/CourseInstance/: index.html
specifications/DataCatalog/: index.html
specifications/DataRecord/: index.html
specifications/Dataset/: index.html
specifications/DefinedTerm/: index.html
specifications/Disease/: index.html
specifications/Enzyme/: index.html
specifications/Event/: index.html
specifications/FormalParameter/: index.html
specifications/Gene/: index.html
specifications/Journal/readme/: index.html
specifications/LabProcess/: index.html
specifications/LabProtocol/: index.html
specifications/MolecularEntity/: index.html
specifications/Phenotype/: index.html
specifications/Protein/: index.html
specifications/ProteinAnnotation/: index.html
specifications/Sample/: index.html
specifications/ScholarlyArticle/: index.html
specifications/SequenceAnnotation/: index.html
specifications/SequenceRange/: index.html
specifications/Study/: index.html
specifications/Taxon/: index.html
specifications/TaxonName/: index.html
specifications/Tool/: index.html
specifications/TrainingMaterial/: index.html
src/rdfcrate/: __init__.py  bioschemas.py  codegen.py  context.py  context_graph.py  context_test.py  literals.py  property_list.py  proto.py  proto2.py  proto3.py  proto4.py  proto5.py  proto6.py  rdfclass.py  rdfdatatype.py  rdfprop.py  rdfterm.py  rdftype.py  roc_entities.py  spec_version.py  test_rdfterm.py  types.py  uris.py  wrapper.py
test/: test_codegen.py  test_context.py  test_crate.py  test_term.py
test/test_crate/: ro-crate-metadata.json  test_context.py
testdata/: obi.py  owl.py  rdfs.py  reproduce.py
todo/: index.html
(+46 files in other folders)
