[project]
name = "rdfcrate"
version = "0.1.0"
description = "Library for building RO-Crates using rdflib"
readme = "README.md"
authors = [
    { name = "Michael Milton", email = "michael.r.milton@gmail.com" } 
]
requires-python = ">=3.12"
dependencies = [
    "rdflib>=7.1.2",
    "requests>=2.32.3",
]

[project.scripts]
rdfcrate = "rdfcrate:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.4",
]
