[project]
name = "rdfcrate"
version = "0.3.0"
description = "Library for building RO-Crates using rdflib"
readme = "README.md"
authors = [
    { name = "Michael Milton", email = "michael.r.milton@gmail.com" } 
]
requires-python = ">=3.10"
dependencies = [
    "rdflib>=7.1.2"
]

[project.scripts]
rdfcrate-codegen = "rdfcrate.codegen:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.5.49",
    "mkdocstrings[python]>=0.27.0",
    "pytest>=8.3.4",
    "mkdocs-same-dir>=0.1.3",
    "doit>=0.36.0",
    "mkquartodocs>=0.5.10",
    "pandas>=2.2.3",
    "tabulate>=0.9.0",
    "requests>=2.32.3",
    "roc-validator>=0.6.3",
    "roc-validator>=0.5.0",
]

[tool.pyright]
include = ["src"]
venvPath = "."
venv = ".venv"
exclude = [".venv"]
