[project]
name = "rdfcrate"
version = "1.1.0"
description = "Library for building RO-Crates using rdflib"
readme = "README.md"
authors = [
    { name = "Michael Milton", email = "michael.r.milton@gmail.com" } 
]
requires-python = ">=3.10"
dependencies = [
    "rdflib>=7.1.2",
    "typer>=0.16.0",
    "vcrpy>=7.0.0",
]

[project.optional-dependencies]
validation = [
    "roc-validator>=0.5.0",
]
nav = [
    "rdfnav; python_version >= '3.12'",
]

[project.scripts]
rdfcrate-codegen = "rdfcrate.codegen.__main__:app"
regenerate-cassettes = "rdfcrate.test_helpers:generate_cassettes"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.5.49",
    "mkdocstrings[python]>=0.27.0",
    "pytest>=8.3.4",
    "mkdocs-same-dir>=0.1.3",
    "doit>=0.36.0",
    "mkquartodocs>=0.5.10",
    "pandas>=2.2.3",
    "tabulate>=0.9.0",
    "requests>=2.32.3",
    "roc-validator>=0.5.0",
    "ruff>=0.11.5",
]

[tool.uv.sources]
rdfnav = { git = "https://github.com/WEHI-SODA-Hub/RdfNav" }

[tool.pyright]
include = ["src"]
venvPath = "."
venv = ".venv"
exclude = [".venv"]
reportGeneralTypeIssues = false
